teste integrado com mongodb e redis via testcontainer ok.